-- Preserve database-level separation of duties by default, while allowing
-- the verified bootstrap administrator's server action to opt one specific
-- approver UUID into a transaction-local testing exception. COALESCE is
-- essential: CHECK constraints accept NULL, so an unset custom setting must
-- evaluate to false rather than UNKNOWN.
ALTER TABLE "funding_benefits" DROP CONSTRAINT "funding_benefits_no_self_approval";--> statement-breakpoint
ALTER TABLE "official_sources" DROP CONSTRAINT "official_sources_no_self_approval";--> statement-breakpoint
ALTER TABLE "source_evidence" DROP CONSTRAINT "source_evidence_no_self_approval";--> statement-breakpoint
ALTER TABLE "verification_records" DROP CONSTRAINT "verification_records_no_self_approval";--> statement-breakpoint
ALTER TABLE "opportunity_document_requirements" DROP CONSTRAINT "opportunity_document_requirements_no_self_approval";--> statement-breakpoint
ALTER TABLE "eligibility_rules" DROP CONSTRAINT "eligibility_rules_no_self_approval";--> statement-breakpoint
ALTER TABLE "funding_benefits" ADD CONSTRAINT "funding_benefits_no_self_approval" CHECK ("funding_benefits"."approved_by_staff_profile_id" IS NULL OR "funding_benefits"."created_by_staff_profile_id" IS NULL OR "funding_benefits"."approved_by_staff_profile_id" <> "funding_benefits"."created_by_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "funding_benefits"."approved_by_staff_profile_id"::text);--> statement-breakpoint
ALTER TABLE "official_sources" ADD CONSTRAINT "official_sources_no_self_approval" CHECK ("official_sources"."approved_by_staff_profile_id" IS NULL OR "official_sources"."created_by_staff_profile_id" IS NULL OR "official_sources"."approved_by_staff_profile_id" <> "official_sources"."created_by_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "official_sources"."approved_by_staff_profile_id"::text);--> statement-breakpoint
ALTER TABLE "source_evidence" ADD CONSTRAINT "source_evidence_no_self_approval" CHECK ("source_evidence"."approved_by_staff_profile_id" IS NULL OR "source_evidence"."approved_by_staff_profile_id" <> "source_evidence"."captured_by_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "source_evidence"."approved_by_staff_profile_id"::text);--> statement-breakpoint
ALTER TABLE "verification_records" ADD CONSTRAINT "verification_records_no_self_approval" CHECK ("verification_records"."approved_by_staff_profile_id" IS NULL OR "verification_records"."approved_by_staff_profile_id" <> "verification_records"."reviewer_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "verification_records"."approved_by_staff_profile_id"::text);--> statement-breakpoint
ALTER TABLE "opportunity_document_requirements" ADD CONSTRAINT "opportunity_document_requirements_no_self_approval" CHECK ("opportunity_document_requirements"."approved_by_staff_profile_id" IS NULL OR "opportunity_document_requirements"."created_by_staff_profile_id" IS NULL OR "opportunity_document_requirements"."approved_by_staff_profile_id" <> "opportunity_document_requirements"."created_by_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "opportunity_document_requirements"."approved_by_staff_profile_id"::text);--> statement-breakpoint
ALTER TABLE "eligibility_rules" ADD CONSTRAINT "eligibility_rules_no_self_approval" CHECK ("eligibility_rules"."approved_by_staff_profile_id" IS NULL OR "eligibility_rules"."created_by_staff_profile_id" IS NULL OR "eligibility_rules"."approved_by_staff_profile_id" <> "eligibility_rules"."created_by_staff_profile_id" OR COALESCE(current_setting('app.bootstrap_admin_actor_id', true), '') = "eligibility_rules"."approved_by_staff_profile_id"::text);
